[metadata]
name = sshkp
url = https://github.com/dmotte/sshkp
author = dmotte
license = MIT

description = Script to execute an SSH command using a password from a KeePass database
long_description =
    [![PyPI](https://img.shields.io/pypi/v/sshkp?logo=python&style=flat-square)](https://pypi.org/project/sshkp/)

    Script to execute an **SSH command** using a password from a **KeePass database**.

    Please refer to the [GitHub repository](https://github.com/dmotte/sshkp) for more information.
long_description_content_type = text/markdown

keywords = ssh database script password environment-variables keepass sshpass pykeepass sshkp kdbx command cli
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Terminals
    Topic :: Utilities

# This version number will be replaced with the current git tag by the
# release.yml workflow
version = 0

[options]
install_requires =
    pykeepass >= 4.0.1
python_requires = >=3.8.10
packages = sshkp

[options.entry_points]
console_scripts =
    sshkp = sshkp.cli:main
